# CFS

./: .clangd  .flake8  .gitignore  .gitmodules  .isort.cfg  CMakeLists.txt  README.md  mesh.inp  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: workflow.yml
build-release/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake
build-release/src/solver/: CTestTestfile.cmake  _solver.cp313-win_amd64.pyd  _solver.exp  _solver.lib  cmake_install.cmake  solver_tests-b12d07c_include.cmake  solver_tests-b12d07c_tests.cmake
build_tools/: build_and_copy.sh  config.sh.example
examples/: fem3.inp  fem4.inp  fem5.inp  fem6.inp  fem_new.inp  fem_test.inp  fem_traction.inp
gui/: app.py  app_toolbar.py  main.py
solver/: CMakeLists.txt  bindings.cpp  cfd.cpp  fem.cpp  pyproject.toml
src/cfs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/gui/: app_dialogs.py  app_toolbar.py  boundary_conditions.py  file.py  main.py  mesh.inp  mesh.py  mesh_extract.py  solver_helpers.py  visualization.py
src/solver/: CMakeLists.txt  bindings.cpp  fem.cpp  fem.h  fem.inp  solver_cli.cpp  test  test.cpp
src/solver/api/: solver_api.cpp
src/solver/core/: fem_element.cpp  fem_solve.cpp  householder.cpp  test
src/solver/include/: fem_element.h  fem_solve.h  householder.h  types.h
src/solver/io/: read_file.cpp
src/solver/tests/: test_fem_basic.cpp
tests/: test_solver.py
